updated media query

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="./assets/images/favicon-32x32.png"
     />
 
-    <title>Frontend Mentor | Results summary component</title>
+    <title>Results summary component</title>
     <!-- THE LINK FOR THE FONT STYEL  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -80,13 +80,13 @@
         </div>
       </div>
     </main>
-    <footer>
+    <!-- <footer>
       <div class="attribution">
         Challenge by
         <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
           >Frontend Mentor</a
         >. Coded by <a href="#">Your Name Here</a>.
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
